--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -29,6 +29,14 @@ library(modelsummary)
 library(corrplot)
 library(plotly)
 library(timetk)
+library(seastests)
+library(ggfortify)
+library(zoo)
+library(tseries)
+library(astsa)
+library(BBmisc)
+library(forecast)
+library(ggplot2)
 ```
 
 ```{r data, echo=FALSE, message=FALSE, warning=FALSE}
@@ -276,8 +284,48 @@ data %>%
 ```
 
  From the above plot we can see that total daily power generated from photovoltaic solar systems shows little change across the years we investigated. The similarity of high peaks in winter and summer is likely due to almost all of the solar generation capacity in Spain being photovoltaic rather than thermal. While there are less sunlight hours in winter the amount and intensity of sun would be similar in the middle of the day, in fact in the high heats present in Spain during summer, solar panels are less efficient, however no clear evidence for this translated in to the data.
+ 
+While other seasonal effects are less clear, by deconstructing the signal, overarching trends, variance and some degree of seasonality can be found in most of the data. Below the signal decomposition for our natural hydro sources is shown. A clear, yearly seasonal cycle is shown, likely demonstrating the existence of a wet and dry season in Spain. On top of this a repeated monthly spike and drop is seen, likely due to some form of maintenance cycle.By overlaying the smoothed seasonal variation with Solar, we can see that they are roughly antiphased. While this will help to provide a constant year round supply, the magnitude difference suggests that there will be some residual seasonal signal present in the other generation sources given the assumption of constant year round generation of electricity. This is seen in further signal decomposition and would help to explain the strong negative correlation between hydro sources and many hydrocarbon energy sources.
+
+<center>
+
+![**Signal Decomposition of Hydro Sources**](../figures/hydro_season.png){width=80%}
+
+</center>
+
+
+*QUESTION* 
+
+Dont know whether to plot or bring in the below - as mentioned above - shows perfect anti phase of hydro and coal in this case seasonal component - ive actually just seen this is gone into above - brain fried deel free to remove
+
+<center>
+
+![**Signal Decomposition of Hydro Sources**](../figures/hydro_coal.png){width=80%}
+
+</center>
 
 #### Proportion of fossil fuel usage over time
+
+*NEED TO REFERENCE PROPERLY - WILL DO IN MORNING*
+
+*Some interp tenuous here - included to discuss tomorrow*
+
+Overall we see a number of trends, further to the seasonality deficit, that underlay the fossil fuel usage over time. As shown below, once seasonality and variance are removed, all display a trend of decreasing to mid 2016, then increasing to mid 2017 before decreasing afterwards. While the inflection points are not identical, they are extremely similar and as such can likely be partially explained by common political factors. The first inflection point centres around June 2016, a Spanish general election with issues centering around green energy and environmental friendliness. Articles talk about the drive at the time to support renewable energy and the uncertainty in the fossil fuel sector which lead to a divsersification away from them (https://www.fitchratings.com/research/corporate-finance/limited-risk-of-energy-reforms-reversal-in-spain-political-risk-remains-24-02-2016). In early 2017 the spanish 
+government implemented the energy efficiency action plan (https://ec.europa.eu/energy/sites/default/files/documents/es_neeap_2017_en.pdf) which reafferms and incentivises the use of non fossil fuel based energy, again leading to the diversification away from them and leading to a decrease in the generation from them.
+
+
+
+
+
+<center>
+
+![**Signal Decomposition of Hydro Sources**](../figures/fossil_trends.png){width=80%}
+
+</center>
+
+
+While the total amount of power generated from fossil fuels varies over time in response to the shortfall between renewables/nuclear and consumer demand there is a very clear relationship between the proportion of power produced from Liquid Natural Gas (LNG) and Hard Coal. The rise in LNG usage is likely driven by dropping prices and the availability of infrastructure to import it en masse as Spain is home to one third of Europe’s LNG import capacity[@lng].
+
 ```{r test}
 fossil <- data %>%
   select(c(Biomass,`Hard Coal`, Lignite, Gas, Oil))
@@ -294,7 +342,13 @@ cbind(data[1], prop.table(as.matrix(fossil), margin = 1)) %>%
   theme(plot.title = element_text(hjust = 0.5)) 
 ```
 
-While the total amount of power generated from fossil fuels varies over time in response to the shortfall between renewables/nuclear and consumer demand there is a very clear relationship between the proportion of power produced from Liquid Natural Gas (LNG) and Hard Coal. The rise in LNG usage is likely driven by dropping prices and the availability of infrastructure to import it en masse as Spain is home to one third of Europe’s LNG import capacity[@lng].
+
+
+
+
+
+
+
 
 # Individual contributions
 
@@ -304,12 +358,19 @@ While the total amount of power generated from fossil fuels varies over time in 
 
 Daniel P:
 
+- Repo Manager 
 - Built Shiny app to allow for interactive exploration of data
 
 Rob:
 
+- timeline/project manager
+- Data analyis
+- Ethics, privacy and security
+- Team Mascot 
+
 Daniel W:
 
+- Document and bibliography manager
 - Investigated and wrote about outliers and effect of linear interpolation
 - Investigated and wrote about correlations, long-term trends and seasonality 
 - Proof-read and edited Ethics, Privacy and Security section.
