Minor editing, splitting Background and Data section, correcting reference capitalisation

--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -49,7 +49,7 @@ journal={}
 }
 
 @article{GURTLER2019110881,
-title = {The dismantling of renewable energy policies: The cases of Spain and the Czech Republic},
+title = {{The dismantling of renewable energy policies: The cases of Spain and the Czech Republic}},
 journal = {Energy Policy},
 volume = {133},
 pages = {110881},
