--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -344,7 +344,7 @@ cbind(data[1], prop.table(as.matrix(fossil), margin = 1)) %>%
 
 *1 page, 2 marks*
 
-As discussed in assignment 2, each member independently researched topics for the project which were then discussed and ranked through preferences of topicality, relevance, data quality and interest, before conducting an ideas session to develop and refine an initial investigation question. The structure and responsibilities of our team were then assigned as shown below. Following this the investigation proper was conducted, consisting of data analysis and literature review. Each member participated in weekly team meetings which were in person at first, before the covid lock down, at which point communications were shifted to an online platform. Outside of these meetings collaboration continued through discussion on Teams Chat as well as commenting throughout code and report.
+As discussed in assignment 2, each member independently researched topics for the project which were then discussed and ranked through preferences of topicality, relevance, data quality and interest, before conducting an ideas session to develop and refine an initial investigation question. The structure and responsibilities of our team were then assigned as shown below. Following this the investigation proper was conducted, consisting of data analysis and literature review. Each member participated in weekly team meetings which were in person at first, before the Covid lockdown, at which point communications were shifted to an online platform. Outside of these meetings collaboration continued through discussion on Teams Chat as well as commenting throughout code and report.
 <center>
 
 ![](../figures/team_roles.png){width="80%"}
@@ -353,15 +353,11 @@ As discussed in assignment 2, each member independently researched topics for th
 
 In addition to these, each member of the team carried out a variety of other functions as the need arose.
 
-*Quick bullet points before writing up*
-
-
-
 Daniel P:
 
--   Repo Manager
--   Built Shiny app to allow for interactive exploration of data
--   wider literature review
+Daniel P served as the repository manager which involved setting up the [Github repository](https://github.com/danielpetterson/DATA471-Time-Series) and ensuring that it was well organised and any conflicts were dealt with. Daniel P also built the [Shiny dashboard](https://danielpetterson.shinyapps.io/scripts/) to allow in-demand analysis of the data by the various stakeholders.
+
+The primary focus of his section of literature review was the change in national energy generation capacity in the years leading up to the time our data was collected and the impact of environmental or financial variables in that time frame. In addition to this he analysed changes in fossil fuel generation methods and how they reacted to changes in renewable energy generation.
 
 Rob:
 
