--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -314,7 +314,7 @@ Dont know whether to plot or bring in the below - as mentioned above - shows per
 
 *Some interp tenuous here - included to discuss tomorrow*
 
-Overall we see a number of trends, further to the seasonality deficit, that underlay the fossil fuel usage over time. As shown below, once seasonality and variance are removed, all display a trend of decreasing to mid 2016, then increasing to mid 2017 before decreasing afterwards. While the inflection points are not identical, they are extremely similar and as such can likely be partially explained by common political factors. The first inflection point centres around June 2016, a Spanish general election with issues centering around green energy and environmental friendliness. Articles talk about the drive at the time to support renewable energy and the uncertainty in the fossil fuel sector which lead to a divsersification away from them (<https://www.fitchratings.com/research/corporate-finance/limited-risk-of-energy-reforms-reversal-in-spain-political-risk-remains-24-02-2016>). In early 2017 the spanish government implemented the energy efficiency action plan (<https://ec.europa.eu/energy/sites/default/files/documents/es_neeap_2017_en.pdf>) which reafferms and incentivises the use of non fossil fuel based energy, again leading to the diversification away from them and leading to a decrease in the generation from them.
+Overall we see a number of trends, further to the seasonality deficit, that underlay the fossil fuel usage over time. As shown below, once seasonality and variance are removed, all display a trend of decreasing to mid 2016, then increasing to mid 2017 before decreasing afterwards. While the inflection points are not identical, they are extremely similar and as such can likely be partially explained by common political factors. The first inflection point centres around June 2016, a Spanish general election with issues centering around green energy and environmental friendliness. Articles talk about the drive at the time to support renewable energy and the uncertainty in the fossil fuel sector which lead to a diversification away from them [@fitch]. In early 2017 the Spanish government implemented the energy efficiency action plan[@actionplan] which reaffirms and incentivises the use of non fossil fuel based energy, again leading to the diversification away from them and leading to a decrease in the generation from them.
 
 <center>
 
