--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -68,3 +68,17 @@ url={https://ec.europa.eu/energy/sites/ener/files/documents/prieto_-_lng_experie
 journal={},
 year={2018}
 }
+
+@electronic{fitch,
+	title={{Limited Risk of Energy Reforms Reversal in Spain; Political Risk Remains}},
+	url={https://www.fitchratings.com/research/corporate-finance/limited-risk-of-energy-reforms-reversal-in-spain-political-risk-remains-24-02-2016},
+	journal={},
+	year={2016}
+}
+
+@electronic{actionplan,
+	title={2017-2020 NATIONAL ENERGY EFFICIENCY ACTION PLAN},
+	url={https://ec.europa.eu/energy/sites/default/files/documents/es_neeap_2017_en.pdf},
+	journal={},
+	year={2018}
+}
